--- a/_sass/_breakpoints.scss
+++ b/_sass/_breakpoints.scss
@@ -23,7 +23,7 @@
     font-size: 16px;
   }
 
-  .b-container, .b-header {
+  .b-container, .b-header, .b-footer {
     width: 100%;
     padding-left: 16px;
     padding-right: 16px;
